// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"lazyImports" option accepts ["inline-comp", "./inline-func", "../inline-func-with-side-effects.fx.ts"] 1`] = `
"var _interopRequireWildcard=require("@babel/runtime/helpers/interopRequireWildcard").default;var _interopRequireDefault=require("@babel/runtime/helpers/interopRequireDefault").default;Object.defineProperty(exports,"__esModule",{value:true});exports.default=void 0;var _classCallCheck2=_interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));var _createClass2=_interopRequireDefault(require("@babel/runtime/helpers/createClass"));var _callSuper2=_interopRequireDefault(require("@babel/runtime/helpers/callSuper"));var _inherits2=_interopRequireDefault(require("@babel/runtime/helpers/inherits"));var _vectorIcons=require("@expo/vector-icons");
var Boo=_interopRequireWildcard(require("Boo"));
var _expoAppLoading=_interopRequireDefault(require("expo-app-loading"));
var _expoAsset=require("expo-asset");
var _fooView=_interopRequireDefault(require("foo-view"));
function _inlineComp(){var data=_interopRequireDefault(require("inline-comp"));_inlineComp=function(){return data;};return data;}
var _react=_interopRequireDefault(require("react"));
var _reactNative=require("react-native");
var _reactRedux=require("react-redux");
require("Foo");

require("./local-file/i-have-side-effects.fx.js");
require("../i-also-have-side-effects.fx");
function _inlineFunc(){var data=_interopRequireDefault(require("./inline-func"));_inlineFunc=function(){return data;};return data;}
function _inlineFuncWithSideEffectsFx(){var data=_interopRequireDefault(require("../inline-func-with-side-effects.fx.ts"));_inlineFuncWithSideEffectsFx=function(){return data;};return data;}var _jsxRuntime=require("react/jsx-runtime");var

Lazy=function(_React$Component){function Lazy(){(0,_classCallCheck2.default)(this,Lazy);return(0,_callSuper2.default)(this,Lazy,arguments);}(0,_inherits2.default)(Lazy,_React$Component);return(0,_createClass2.default)(Lazy,[{key:"componentDidMount",value:
function componentDidMount(){
console.log('Calling InlineFuncFromPackage()');
(0,_inlineComp().default)();

console.log('Calling InlineFuncFromFile()');
(0,_inlineFunc().default)();

console.log('Calling Boo.myFunc()');
Boo.myFunc();

_expoAsset.Asset.loadAsync([require('./assets/icon.png')]);
}},{key:"render",value:

function render(){
return(
(0,_jsxRuntime.jsxs)(_reactNative.View,{children:[
(0,_jsxRuntime.jsx)(_expoAppLoading.default,{}),
(0,_jsxRuntime.jsx)(_vectorIcons.Ionicons,{name:"md-options",size:28}),
(0,_jsxRuntime.jsx)(_fooView.default,{})]}
));

}},{key:"unusedFunction",value:

function unusedFunction(){
(0,_inlineFuncWithSideEffectsFx().default)();
}}]);}(_react.default.Component);var _default=exports.default=


(0,_reactRedux.connect)()(Lazy);"
`;

exports[`"lazyImports" option accepts [Function anonymous] 1`] = `
"var _interopRequireWildcard=require("@babel/runtime/helpers/interopRequireWildcard").default;var _interopRequireDefault=require("@babel/runtime/helpers/interopRequireDefault").default;Object.defineProperty(exports,"__esModule",{value:true});exports.default=void 0;function _classCallCheck2(){var data=_interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));_classCallCheck2=function(){return data;};return data;}function _createClass2(){var data=_interopRequireDefault(require("@babel/runtime/helpers/createClass"));_createClass2=function(){return data;};return data;}function _callSuper2(){var data=_interopRequireDefault(require("@babel/runtime/helpers/callSuper"));_callSuper2=function(){return data;};return data;}function _inherits2(){var data=_interopRequireDefault(require("@babel/runtime/helpers/inherits"));_inherits2=function(){return data;};return data;}function _vectorIcons(){var data=require("@expo/vector-icons");_vectorIcons=function(){return data;};return data;}
function Boo(){var data=_interopRequireWildcard(require("Boo"));Boo=function(){return data;};return data;}
function _expoAppLoading(){var data=_interopRequireDefault(require("expo-app-loading"));_expoAppLoading=function(){return data;};return data;}
function _expoAsset(){var data=require("expo-asset");_expoAsset=function(){return data;};return data;}
function _fooView(){var data=_interopRequireDefault(require("foo-view"));_fooView=function(){return data;};return data;}
function _inlineComp(){var data=_interopRequireDefault(require("inline-comp"));_inlineComp=function(){return data;};return data;}
function _react(){var data=_interopRequireDefault(require("react"));_react=function(){return data;};return data;}
function _reactNative(){var data=require("react-native");_reactNative=function(){return data;};return data;}
function _reactRedux(){var data=require("react-redux");_reactRedux=function(){return data;};return data;}
require("Foo");

require("./local-file/i-have-side-effects.fx.js");
require("../i-also-have-side-effects.fx");
function _inlineFunc(){var data=_interopRequireDefault(require("./inline-func"));_inlineFunc=function(){return data;};return data;}
var _inlineFuncWithSideEffectsFx=_interopRequireDefault(require("../inline-func-with-side-effects.fx.ts"));function _jsxRuntime(){var data=require("react/jsx-runtime");_jsxRuntime=function(){return data;};return data;}var

Lazy=function(_React$Component){function Lazy(){(0,_classCallCheck2().default)(this,Lazy);return(0,_callSuper2().default)(this,Lazy,arguments);}(0,_inherits2().default)(Lazy,_React$Component);return(0,_createClass2().default)(Lazy,[{key:"componentDidMount",value:
function componentDidMount(){
console.log('Calling InlineFuncFromPackage()');
(0,_inlineComp().default)();

console.log('Calling InlineFuncFromFile()');
(0,_inlineFunc().default)();

console.log('Calling Boo.myFunc()');
Boo().myFunc();

_expoAsset().Asset.loadAsync([require('./assets/icon.png')]);
}},{key:"render",value:

function render(){
return(
(0,_jsxRuntime().jsxs)(_reactNative().View,{children:[
(0,_jsxRuntime().jsx)(_expoAppLoading().default,{}),
(0,_jsxRuntime().jsx)(_vectorIcons().Ionicons,{name:"md-options",size:28}),
(0,_jsxRuntime().jsx)(_fooView().default,{})]}
));

}},{key:"unusedFunction",value:

function unusedFunction(){
(0,_inlineFuncWithSideEffectsFx.default)();
}}]);}(_react().default.Component);var _default=exports.default=


(0,_reactRedux().connect)()(Lazy);"
`;

exports[`"lazyImports" option accepts false 1`] = `
"var _interopRequireWildcard=require("@babel/runtime/helpers/interopRequireWildcard").default;var _interopRequireDefault=require("@babel/runtime/helpers/interopRequireDefault").default;Object.defineProperty(exports,"__esModule",{value:true});exports.default=void 0;var _classCallCheck2=_interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));var _createClass2=_interopRequireDefault(require("@babel/runtime/helpers/createClass"));var _callSuper2=_interopRequireDefault(require("@babel/runtime/helpers/callSuper"));var _inherits2=_interopRequireDefault(require("@babel/runtime/helpers/inherits"));var _vectorIcons=require("@expo/vector-icons");
var Boo=_interopRequireWildcard(require("Boo"));
var _expoAppLoading=_interopRequireDefault(require("expo-app-loading"));
var _expoAsset=require("expo-asset");
var _fooView=_interopRequireDefault(require("foo-view"));
var _inlineComp=_interopRequireDefault(require("inline-comp"));
var _react=_interopRequireDefault(require("react"));
var _reactNative=require("react-native");
var _reactRedux=require("react-redux");
require("Foo");

require("./local-file/i-have-side-effects.fx.js");
require("../i-also-have-side-effects.fx");
var _inlineFunc=_interopRequireDefault(require("./inline-func"));
var _inlineFuncWithSideEffectsFx=_interopRequireDefault(require("../inline-func-with-side-effects.fx.ts"));var _jsxRuntime=require("react/jsx-runtime");var

Lazy=function(_React$Component){function Lazy(){(0,_classCallCheck2.default)(this,Lazy);return(0,_callSuper2.default)(this,Lazy,arguments);}(0,_inherits2.default)(Lazy,_React$Component);return(0,_createClass2.default)(Lazy,[{key:"componentDidMount",value:
function componentDidMount(){
console.log('Calling InlineFuncFromPackage()');
(0,_inlineComp.default)();

console.log('Calling InlineFuncFromFile()');
(0,_inlineFunc.default)();

console.log('Calling Boo.myFunc()');
Boo.myFunc();

_expoAsset.Asset.loadAsync([require('./assets/icon.png')]);
}},{key:"render",value:

function render(){
return(
(0,_jsxRuntime.jsxs)(_reactNative.View,{children:[
(0,_jsxRuntime.jsx)(_expoAppLoading.default,{}),
(0,_jsxRuntime.jsx)(_vectorIcons.Ionicons,{name:"md-options",size:28}),
(0,_jsxRuntime.jsx)(_fooView.default,{})]}
));

}},{key:"unusedFunction",value:

function unusedFunction(){
(0,_inlineFuncWithSideEffectsFx.default)();
}}]);}(_react.default.Component);var _default=exports.default=


(0,_reactRedux.connect)()(Lazy);"
`;

exports[`"lazyImports" option accepts null 1`] = `
"var _interopRequireWildcard=require("@babel/runtime/helpers/interopRequireWildcard").default;var _interopRequireDefault=require("@babel/runtime/helpers/interopRequireDefault").default;Object.defineProperty(exports,"__esModule",{value:true});exports.default=void 0;var _classCallCheck2=_interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));var _createClass2=_interopRequireDefault(require("@babel/runtime/helpers/createClass"));var _callSuper2=_interopRequireDefault(require("@babel/runtime/helpers/callSuper"));var _inherits2=_interopRequireDefault(require("@babel/runtime/helpers/inherits"));var _vectorIcons=require("@expo/vector-icons");
var Boo=_interopRequireWildcard(require("Boo"));
var _expoAppLoading=_interopRequireDefault(require("expo-app-loading"));
var _expoAsset=require("expo-asset");
var _fooView=_interopRequireDefault(require("foo-view"));
var _inlineComp=_interopRequireDefault(require("inline-comp"));
var _react=_interopRequireDefault(require("react"));
var _reactNative=require("react-native");
var _reactRedux=require("react-redux");
require("Foo");

require("./local-file/i-have-side-effects.fx.js");
require("../i-also-have-side-effects.fx");
var _inlineFunc=_interopRequireDefault(require("./inline-func"));
var _inlineFuncWithSideEffectsFx=_interopRequireDefault(require("../inline-func-with-side-effects.fx.ts"));var _jsxRuntime=require("react/jsx-runtime");var

Lazy=function(_React$Component){function Lazy(){(0,_classCallCheck2.default)(this,Lazy);return(0,_callSuper2.default)(this,Lazy,arguments);}(0,_inherits2.default)(Lazy,_React$Component);return(0,_createClass2.default)(Lazy,[{key:"componentDidMount",value:
function componentDidMount(){
console.log('Calling InlineFuncFromPackage()');
(0,_inlineComp.default)();

console.log('Calling InlineFuncFromFile()');
(0,_inlineFunc.default)();

console.log('Calling Boo.myFunc()');
Boo.myFunc();

_expoAsset.Asset.loadAsync([require('./assets/icon.png')]);
}},{key:"render",value:

function render(){
return(
(0,_jsxRuntime.jsxs)(_reactNative.View,{children:[
(0,_jsxRuntime.jsx)(_expoAppLoading.default,{}),
(0,_jsxRuntime.jsx)(_vectorIcons.Ionicons,{name:"md-options",size:28}),
(0,_jsxRuntime.jsx)(_fooView.default,{})]}
));

}},{key:"unusedFunction",value:

function unusedFunction(){
(0,_inlineFuncWithSideEffectsFx.default)();
}}]);}(_react.default.Component);var _default=exports.default=


(0,_reactRedux.connect)()(Lazy);"
`;

exports[`"lazyImports" option accepts true 1`] = `
"var _interopRequireWildcard=require("@babel/runtime/helpers/interopRequireWildcard").default;var _interopRequireDefault=require("@babel/runtime/helpers/interopRequireDefault").default;Object.defineProperty(exports,"__esModule",{value:true});exports.default=void 0;function _classCallCheck2(){var data=_interopRequireDefault(require("@babel/runtime/helpers/classCallCheck"));_classCallCheck2=function(){return data;};return data;}function _createClass2(){var data=_interopRequireDefault(require("@babel/runtime/helpers/createClass"));_createClass2=function(){return data;};return data;}function _callSuper2(){var data=_interopRequireDefault(require("@babel/runtime/helpers/callSuper"));_callSuper2=function(){return data;};return data;}function _inherits2(){var data=_interopRequireDefault(require("@babel/runtime/helpers/inherits"));_inherits2=function(){return data;};return data;}function _vectorIcons(){var data=require("@expo/vector-icons");_vectorIcons=function(){return data;};return data;}
function Boo(){var data=_interopRequireWildcard(require("Boo"));Boo=function(){return data;};return data;}
function _expoAppLoading(){var data=_interopRequireDefault(require("expo-app-loading"));_expoAppLoading=function(){return data;};return data;}
var _expoAsset=require("expo-asset");
function _fooView(){var data=_interopRequireDefault(require("foo-view"));_fooView=function(){return data;};return data;}
function _inlineComp(){var data=_interopRequireDefault(require("inline-comp"));_inlineComp=function(){return data;};return data;}
function _react(){var data=_interopRequireDefault(require("react"));_react=function(){return data;};return data;}
function _reactNative(){var data=require("react-native");_reactNative=function(){return data;};return data;}
function _reactRedux(){var data=require("react-redux");_reactRedux=function(){return data;};return data;}
require("Foo");

require("./local-file/i-have-side-effects.fx.js");
require("../i-also-have-side-effects.fx");
var _inlineFunc=_interopRequireDefault(require("./inline-func"));
var _inlineFuncWithSideEffectsFx=_interopRequireDefault(require("../inline-func-with-side-effects.fx.ts"));function _jsxRuntime(){var data=require("react/jsx-runtime");_jsxRuntime=function(){return data;};return data;}var

Lazy=function(_React$Component){function Lazy(){(0,_classCallCheck2().default)(this,Lazy);return(0,_callSuper2().default)(this,Lazy,arguments);}(0,_inherits2().default)(Lazy,_React$Component);return(0,_createClass2().default)(Lazy,[{key:"componentDidMount",value:
function componentDidMount(){
console.log('Calling InlineFuncFromPackage()');
(0,_inlineComp().default)();

console.log('Calling InlineFuncFromFile()');
(0,_inlineFunc.default)();

console.log('Calling Boo.myFunc()');
Boo().myFunc();

_expoAsset.Asset.loadAsync([require('./assets/icon.png')]);
}},{key:"render",value:

function render(){
return(
(0,_jsxRuntime().jsxs)(_reactNative().View,{children:[
(0,_jsxRuntime().jsx)(_expoAppLoading().default,{}),
(0,_jsxRuntime().jsx)(_vectorIcons().Ionicons,{name:"md-options",size:28}),
(0,_jsxRuntime().jsx)(_fooView().default,{})]}
));

}},{key:"unusedFunction",value:

function unusedFunction(){
(0,_inlineFuncWithSideEffectsFx.default)();
}}]);}(_react().default.Component);var _default=exports.default=


(0,_reactRedux().connect)()(Lazy);"
`;

exports[`metro composes with babel-plugin-module-resolver 1`] = `
"
require("react-native");
require("react-native-vector-icons");"
`;

exports[`metro supports disabling reanimated 1`] = `
"
function someWorklet(greeting){
'worklet';
console.log("Hey I'm running on the UI thread");
}"
`;

exports[`metro supports reanimated worklets 1`] = `
"var _worklet_14307677064221_init_data={code:"function someWorklet_workletJs1(greeting){console.log(\\"Hey I'm running on the UI thread\\");}",location:"[mock]/worklet.js",sourceMap:"{\\"version\\":3,\\"names\\":[\\"someWorklet_workletJs1\\",\\"greeting\\",\\"console\\",\\"log\\"],\\"sources\\":[\\"[mock]/worklet.js\\"],\\"mappings\\":\\"AAAA,SAAAA,uBAAAC,QAAA,EAAAC,OAAA,CAAAC,GAAA,qCACA\\",\\"ignoreList\\":[]}"};var someWorklet=
function someWorklet_workletJs1Factory({_worklet_14307677064221_init_data}){var _e=[new global.Error(),1,-27];var someWorklet=function(greeting){

console.log("Hey I'm running on the UI thread");
};someWorklet.__closure={};someWorklet.__workletHash=14307677064221;someWorklet.__pluginVersion="[GLOBAL]";someWorklet.__initData=_worklet_14307677064221_init_data;someWorklet.__stackDetails=_e;return someWorklet;}({_worklet_14307677064221_init_data});"
`;

exports[`metro transpiles non-standard exports 1`] = `
"var _interopRequireWildcard=require("@babel/runtime/helpers/interopRequireWildcard").default;Object.defineProperty(exports,"__esModule",{value:true});exports.default=void 0;
var _default=_interopRequireWildcard(require("./Animated"));exports.default=_default;"
`;

exports[`metro uses the platform's react-native import 1`] = `
"
var _reactNative=require("react-native");"
`;

exports[`metro+hermes composes with babel-plugin-module-resolver 1`] = `
"
require("react-native");
require("react-native-vector-icons");"
`;

exports[`metro+hermes supports disabling reanimated 1`] = `
"
function someWorklet(greeting){
'worklet';
console.log("Hey I'm running on the UI thread");
}"
`;

exports[`metro+hermes supports reanimated worklets 1`] = `
"var _worklet_14307677064221_init_data={code:"function someWorklet_workletJs1(greeting){console.log(\\"Hey I'm running on the UI thread\\");}",location:"[mock]/worklet.js",sourceMap:"{\\"version\\":3,\\"names\\":[\\"someWorklet_workletJs1\\",\\"greeting\\",\\"console\\",\\"log\\"],\\"sources\\":[\\"[mock]/worklet.js\\"],\\"mappings\\":\\"AAAA,SAAAA,uBAAAC,QAAA,EAAAC,OAAA,CAAAC,GAAA,qCACA\\",\\"ignoreList\\":[]}"};var someWorklet=
function someWorklet_workletJs1Factory({_worklet_14307677064221_init_data}){var _e=[new global.Error(),1,-27];var someWorklet=function(greeting){

console.log("Hey I'm running on the UI thread");
};someWorklet.__closure={};someWorklet.__workletHash=14307677064221;someWorklet.__pluginVersion="[GLOBAL]";someWorklet.__initData=_worklet_14307677064221_init_data;someWorklet.__stackDetails=_e;return someWorklet;}({_worklet_14307677064221_init_data});"
`;

exports[`metro+hermes transpiles non-standard exports 1`] = `
"var _interopRequireWildcard=require("@babel/runtime/helpers/interopRequireWildcard").default;Object.defineProperty(exports,"__esModule",{value:true});exports.default=void 0;
var _default=_interopRequireWildcard(require("./Animated"));exports.default=_default;"
`;

exports[`metro+hermes uses the platform's react-native import 1`] = `
"
var _reactNative=require("react-native");"
`;

exports[`webpack composes with babel-plugin-module-resolver 1`] = `
"
import"react-native";
import'react-native-vector-icons';"
`;

exports[`webpack supports disabling reanimated 1`] = `
"
function someWorklet(greeting){
'worklet';
console.log("Hey I'm running on the UI thread");
}"
`;

exports[`webpack supports reanimated worklets 1`] = `
"const _worklet_14307677064221_init_data={code:"function someWorklet_workletJs1(greeting){console.log(\\"Hey I'm running on the UI thread\\");}",location:"[mock]/worklet.js",sourceMap:"{\\"version\\":3,\\"names\\":[\\"someWorklet_workletJs1\\",\\"greeting\\",\\"console\\",\\"log\\"],\\"sources\\":[\\"[mock]/worklet.js\\"],\\"mappings\\":\\"AAAA,SAAAA,uBAAAC,QAAA,EAAAC,OAAA,CAAAC,GAAA,qCACA\\",\\"ignoreList\\":[]}"};const someWorklet=
function someWorklet_workletJs1Factory({_worklet_14307677064221_init_data}){const _e=[new global.Error(),1,-27];const someWorklet=function(greeting){

console.log("Hey I'm running on the UI thread");
};someWorklet.__closure={};someWorklet.__workletHash=14307677064221;someWorklet.__pluginVersion="[GLOBAL]";someWorklet.__initData=_worklet_14307677064221_init_data;someWorklet.__stackDetails=_e;return someWorklet;}({_worklet_14307677064221_init_data});"
`;

exports[`webpack transpiles non-standard exports 1`] = `
"
import*as _default from'./Animated';export{_default as default};"
`;

exports[`webpack uses the platform's react-native import 1`] = `"import View from"react-native-web/dist/exports/View";"`;
